package adapter;

public class PasarelaExterna {

    public void realizarTransaccion(double importe) {
        System.out.println("Procesando pago externo de $" + importe);
    }
}