package adapter;

public interface ProcesarPago {

    void procesarPago(double monto);

}